// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <Divider>
    <hr
      aria-hidden="true"
      className="divider orion-fusion-theme"
    />
  </Divider>
</ThemeContextProvider>
`;

exports[`Divider it should pass in a custom prop 1`] = `
<SectionDivider
  className="divider-container"
  id="testDivider"
  level={3}
  text="custom-text"
/>
`;

exports[`Divider it should pass in a string of text 1`] = `
<div
  className="divider-container"
>
  <span
    className="divider-text"
  >
    Divider Test String
  </span>
</div>
`;

exports[`Divider should render a basic component 1`] = `
<hr
  aria-hidden="true"
  className="divider"
/>
`;

exports[`Divider should spread a custom prop onto the text with level divider 1`] = `
<SectionDivider
  className="divider-container"
  id="custom-id"
  level={3}
  text="custom-text"
/>
`;
